--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ex3_Boats_simulation)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(ex3_Boats_simulation main.cpp Boat.h patrolBoat.cpp patrolBoat.h cruiserBoat.cpp cruiserBoat.h freighterBoat.cpp freighterBoat.h gameObj.h)
+add_executable(ex3_Boats_simulation Boat.h)
