--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ex3_Boats_simulation)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(ex3_Boats_simulation ships_simulation-main/src/Model/Model.cpp ships_simulation-main/src/Model/Model.h ships_simulation-main/src/Model/gameObj.cpp ships_simulation-main/src/Controller/Terminal.cpp ships_simulation-main/src/Controller/Terminal.h ships_simulation-main/src/View/View.cpp ships_simulation-main/src/View/View.h)
+add_executable(ex3_Boats_simulation ships_simulation-main/src/Model/Model.cpp ships_simulation-main/src/Model/Model.h ships_simulation-main/src/Model/gameObj.cpp ships_simulation-main/src/Controller/Terminal.cpp ships_simulation-main/src/Controller/Terminal.h ships_simulation-main/src/View/View.cpp ships_simulation-main/src/View/View.h ships_simulation-main/src/Model/Boat.cpp)
